updating web5 js to latest build and removed src direcotry folder in quickstart

--- a/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -32,7 +32,7 @@ cd web5-app
 <p>Use NPM to install Web5:</p>
 
 ```bash
-npm install @tbd54566975/web5@0.7.8
+npm install @tbd54566975/web5@0.7.9
 ```
 
 :::note
@@ -44,7 +44,7 @@ This will create a `package.json` in the root of your project. Open `package.jso
 ```js
 {
   "dependencies": {
-    "@tbd54566975/web5": "0.7.8"
+    "@tbd54566975/web5": "0.7.9"
   },
   "type": "module"
 }
@@ -52,11 +52,9 @@ This will create a `package.json` in the root of your project. Open `package.jso
 
 ### 3. Import Web5
 
-Let's create a `src` directory and `index.js` file to write our application:
+Let's create an `index.js` file to write our application:
 
 ```bash
-mkdir src
-cd src
 touch index.js
 ```
 
