--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -32,7 +32,7 @@ Web5 is split into three main top-level objects:
 
   Then from your CLI, run:
   ```bash
-  node src/index.js
+  node index.js
   ```
 
   You'll see the newly created DID.
