refactoring to match all other console.log examples

--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -44,7 +44,7 @@ const { record } = await web5.dwn.records.create({
 
   You'll see the record that was written to the user's DWN. It will resemble:
   ```js
-    write result _Record {}
+    writeResult _Record {}
   ```
   </p>
 </details>
