--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -34,7 +34,7 @@ const { record } = await web5.dwn.records.create({
 
   In <code>index.js</code>, add the following line and save your file:
   ```js
-  console.log('write result', record);
+  console.log('writeResult', record);
   ```
 
   Then from the terminal, run:
