remove extra file and comment out URL

--- a/site/docs/web5/_quickstart-10-next-steps.mdx
+++ b/site/docs/web5/_quickstart-10-next-steps.mdx
@@ -17,6 +17,6 @@ leaving them in full control of their content.
 
 * [Learn more about DIDs](/docs/web5/learn/decentralized-identifiers)
 * [Learn more about DWNs](/docs/web5/learn/decentralized-web-nodes)
-* [Build a decentralized ToDo app](/docs/web5/build/apps/todo-app-tutorial)
+{/* * [Build a decentralized ToDo app](/docs/web5/build/apps/todo-app-tutorial) */}
 
 </section>
