--- a/site/src/content/projects/web5/heading.mdx
+++ b/site/src/content/projects/web5/heading.mdx
@@ -42,7 +42,7 @@ Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, o
       type: 'button',
       data: {
         label: '5️⃣ About Web5',
-        url: 'blog/what-is-web5',
+        url: '/blog/what-is-web5',
         isExternalLink: true,
       },
     },
