--- a/site/docs/web5/_quickstart-07-update-record.mdx
+++ b/site/docs/web5/_quickstart-07-update-record.mdx
@@ -15,7 +15,7 @@ const updateResult = await record.update({data: "Hello, I'm updated!"});
 To see the record that was updated in the DWN, add the following to <code>index.js</code>:
 
 ```js
-​console.log('updateResult', await record.data.text())
+console.log('updateResult', await record.data.text())
 ```
 
 The output will resemble:
