added new API doc for protocol class. issue #559

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -4,7 +4,7 @@ import ApiDetails from '@site/src/components/ApiDetails';
 # protocols
 
 ## Overview
-The `protocols` class is responsible for providing convenience methods for managing protocols between DWNs
+The `protocols` class is responsible for providing convenience methods for managing protocols between DWNs. [Learn more about Protocols](/docs/web5/learn/protocols).
 
 <Divider type="slash"/>
 
