updating css -paragraph color to white

--- a/site/src/pages/open-source/code-of-conduct.mdx
+++ b/site/src/pages/open-source/code-of-conduct.mdx
@@ -85,7 +85,7 @@ This Code of Conduct applies within all project spaces, and it also applies when
 
 Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to the TBD Open Source Governance Committee (GC) at
-`tbd-open-source-governance@squareup.com`.
+tbd-open-source-governance@squareup.com.
 All complaints will be reviewed and investigated promptly and fairly.
 
 The GC is obligated to respect the privacy and security of the
