Add Meet Web5 video to Web5 blog post

--- a/site/blog/2022-07-01-what-is-web5.md
+++ b/site/blog/2022-07-01-what-is-web5.md
@@ -25,7 +25,9 @@ tags: [web5]
   <link rel="apple-touch-icon" href="https://developer.tbd.website/img/tbd-fav-icon-main.png" />
 </head>
 
-![What is Web5?](/img/what_is_web5.png)
+<div align="center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/J2znm4f7VUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 
 Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols.
 
