--- a/site/blog/2022-07-01-what-is-web5.md
+++ b/site/blog/2022-07-01-what-is-web5.md
@@ -16,7 +16,7 @@ tags: [web5]
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="twitter:domain" content="developer.tbd.website" />
-  <meta name="twitter:site" content="@tbddev" />
+  <meta name="twitter:site" content="@tbdevs" />
   <meta name="twitter:title" content="What is Web5" />
   <meta property="twitter:url" content='https://developer.tbd.website/blog/2022-07-01-what-is-web5' /> 
   <meta name="twitter:description" content="Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols." />
