--- a/site/api/web5-js/index.mdx
+++ b/site/api/web5-js/index.mdx
@@ -7,7 +7,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Divider from '@site/src/components/Divider';
 import ApiDetails from '@site/src/components/ApiDetails';
-
+import ScriptSrc from '@site/src/components/ScriptSrc';
 
 
 # Web5
@@ -40,15 +40,11 @@ npm install @tbd54566975/web5
   </TabItem>
   <TabItem value="cdn" label="CDN">
 
-```js
-<script src="https://unpkg.com/@tbd54566975/web5@0.7.6/dist/browser.js"></script>
-```
+<ScriptSrc unpkg={true} />
 
 or
 
-```js
-<script src="https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.7.6/dist/browser.mjs"></script>
-```
+<ScriptSrc jsdelivr={true} />
 
   </TabItem>
 </Tabs>
@@ -66,15 +62,11 @@ import { Web5 } from '@tbd54566975/web5';
   </TabItem>
   <TabItem value="cdn" label="CDN">
 
-```js
-import { Web5 } from "https://unpkg.com/@tbd54566975/web5@0.7.6/dist/browser.js";
-```
+<ScriptSrc unpkg={true} />
 
 or
 
-```js
-import { Web5 } from "https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.7.6/dist/browser.mjs"
-```
+<ScriptSrc jsdelivr={true} />
 
   </TabItem>
 </Tabs>
