--- a/site/docs/web5/_quickstart-10-next-steps.mdx
+++ b/site/docs/web5/_quickstart-10-next-steps.mdx
@@ -8,7 +8,7 @@ leaving them in full control of their content.
 
 :::info
 * [Download the completed index.js file](/files/index.txt)
-* [View source code for the interactive sandbox of this Quickstart](https://raw.githubusercontent.com/TBD54566975/developer.tbd.website/examples/web5-quickstart-widgets)
+* [View source code for the interactive sandbox of this Quickstart](https://github.com/TBD54566975/developer.tbd.website/tree/main/examples/web5-quickstart-widgets)
 * [Run interactive sandbox directly in your browser](https://moonlit-centaur-0d7b4f.netlify.app/)
 :::
 
