--- a/site/docs/web5/_quickstart-06-read-record.mdx
+++ b/site/docs/web5/_quickstart-06-read-record.mdx
@@ -2,7 +2,7 @@
 
 ## 3. Read DWN Records
 
-If the user has given your app read permissions to their DWN, you can read their data by accessing it through the `record` property.
+If the user has given your app read permissions to their DWN, you can read their data by accessing it through the `record` property. If you don't already have access to the record, you can [query](/docs/web5/build/decentralized-web-nodes/update-to-dwn) to obtain it.
 
 To return the text data stored in the `record`, add the following to `index.js`:
 ```js
