--- a/site/api/web5-js/index.mdx
+++ b/site/api/web5-js/index.mdx
@@ -75,6 +75,7 @@ It's the original crypto...CRYPTOGRAPHY.
 */
 
 import { webcrypto } from "node:crypto";
+import { Web5 } from '@tbd54566975/web5';
 ```
 </details>
 
@@ -91,6 +92,7 @@ import "react-native-get-random-values";
 import { hmac } from "@noble/hashes/hmac";
 import { sha256 } from "@noble/hashes/sha256";
 import { sha512 } from "@noble/hashes/sha512";
+import { Web5 } from '@tbd54566975/web5';
 
 ed.etc.sha512Sync = (...m) => sha512(ed.etc.concatBytes(...m));
 ed.etc.sha512Async = (...m) => Promise.resolve(ed.etc.sha512Sync(...m));
