--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -172,6 +172,18 @@ const { status } = await record.send("did:example:bob");
 
 ```
 
+```js
+// this creates a published record
+const { record } = await web5.dwn.records.create({
+  data: "A published record",
+  message: {
+      dataFormat: "text/plain",
+      published: true,
+      datePublished: dateToPublish,
+  }
+});
+```
+
 
 <Divider type="slash"/>
 
