Updating code snippet example to show both new fields

--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -173,13 +173,18 @@ const { status } = await record.send("did:example:bob");
 ```
 
 ```js
-// this creates a published record
-const { record } = await web5.dwn.records.create({
-  data: "A published record",
+import { Temporal } from '@js-temporal/polyfill';
+
+let today = Temporal.Now.instant();
+let tomorrow = today.add({seconds: 86400});
+
+//Create a record today to be published tomorrow 
+const {record} = await web5.dwn.records.create({
+  data: "This record will be created now and published tomorrow",
   message: {
-      dataFormat: "text/plain",
-      published: true,
-      datePublished: dateToPublish,
+    dataFormat: "text/plain",
+    published: true,
+    datePublished: tomorrow.toString({smallestUnit: 'microseconds' }),
   }
 });
 ```
