--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -266,7 +266,7 @@ Method for querying the DWN of a provided target
                                                         type: 'string',
                                                         isOptional: true,
                                                         field: 'publishedDescending',
-                                                        value: 'Sorting records by datePublished in ascending order',
+                                                        value: 'Sorting records by datePublished in descending order',
                                                     },
                                                 },                                                                                                                            
                                             ]}
