removing all fields and highlighting code snippets

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -272,50 +272,7 @@ Queries a DID's DWNs for the presence of a protocol. This method is useful in de
                                             ]}
                                         />,
                                     },
-                                },
-                                {
-                                    data: {
-                                        isObject: true,
-                                        type: 'ProtocolsQuerySort',
-                                        field: 'dateSort',
-                                        value: <ApiDetails
-                                                details={[
-                                                {
-                                                    data: {
-                                                        type: 'string',
-                                                        isOptional: true,
-                                                        field: 'createdAscending',
-                                                        value: 'Sorting protocols by dateCreated in ascending order',
-                                                    },
-                                                },  
-                                                {
-                                                    data: {
-                                                        type: 'string',
-                                                        isOptional: true,
-                                                        field: 'createdDescending',
-                                                        value: 'Sorting protocols by dateCreated in descending order',
-                                                    },
-                                                }, 
-                                                {
-                                                    data: {
-                                                        type: 'string',
-                                                        isOptional: true,
-                                                        field: 'publishedAscending',
-                                                        value: 'Sorting protocols by datePublished in ascending order',
-                                                    },
-                                                }, 
-                                                {
-                                                    data: {
-                                                        type: 'string',
-                                                        isOptional: true,
-                                                        field: 'publishedDescending',
-                                                        value: 'Sorting protocols by datePublished in descending order',
-                                                    },
-                                                },                                                                                                                            
-                                            ]}
-                                        />,
-                                    },
-                                },                               
+                                },                            
                             ]}
                         />,
                     },
@@ -380,7 +337,9 @@ const { protocols } = await web5.dwn.protocols.query({
     filter: {
       protocol: 'http://social-mediasss.xyz',
     },
+    //highlight-start
     dateSort: 'createdDescending'
+    //highlight-end
   }
 });
 ```
