adding link to guide in API docs

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -217,7 +217,7 @@ protocol.send(myDid);
 
 ### query(request)
 
-Queries a DID's DWNs for the presence of a protocol. This method is useful in detecting what protocols a given DID has installed to enable interaction over the protocol.
+Queries a DID's DWNs for the presence of a protocol. This method is useful in detecting what protocols a given DID has installed to enable interaction over the protocol. See [query from DWN guide](/docs/web5/build/decentralized-web-nodes/query-from-dwn) for more details.
 
 #### Parameters
 
