--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -167,7 +167,7 @@ The [create() method](#createrequest) is an alias for write() and both take the 
 
 ### query(request)
 
-Method for querying the DWN of a provided target
+Method for querying the DWN of a provided target. See [query from DWN guide](/docs/web5/build/decentralized-web-nodes/query-from-dwn) for more details.
 
 #### Parameters
 
