Adding final details and changes from angies review

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -335,7 +335,7 @@ console.log(protocols);
 const { protocols } = await web5.dwn.protocols.query({
   message: {
     filter: {
-      protocol: 'http://social-mediasss.xyz',
+      protocol: 'http://social-media.xyz',
     },
     //highlight-start
     dateSort: 'createdDescending'
