--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -98,7 +98,7 @@ Creates a new record and stores it in the user's local DWN, remote DWNs, or anot
                                         type: 'string',
                                         isOptional: true,
                                         field: 'datePublished',
-                                        value: 'The date the record was published. When specifying to publish a record without providing the datePublished attribute, the record will be published now',
+                                        value: 'The date to make the record public. It should be in ISO 8601 (\'YYYY-MM-DDThh:mm:ss.ssssssZ\') format. Note that if the datePublished field is omitted and published is set to true, the record will be published upon creation.',
                                     },
                                 },                                                                                                                            
                             ]}
