removing reference to src folder from Quickstart. added run command to a few steps that were missing it. corrected link to Query guide. addresses issue #606

--- a/site/docs/web5/_quickstart-03-create-did.mdx
+++ b/site/docs/web5/_quickstart-03-create-did.mdx
@@ -25,12 +25,14 @@ Web5 is split into three main top-level objects:
   <summary>Test your code</summary>
   <p>
 
-  Wanna see the DID you just created? In <code>index.js</code>, add the following line and save your file:
+  Wanna see the DID you just created? 
+  
+  In <code>index.js</code>, add the following line and save your file:
   ```js
   console.log(aliceDid);
   ```
 
-  Then from your CLI, run:
+  Then from the terminal, run:
   ```bash
   node index.js
   ```
