--- a/site/docs/web5/_quickstart-07-update-record.mdx
+++ b/site/docs/web5/_quickstart-07-update-record.mdx
@@ -18,6 +18,12 @@ To see the record that was updated in the DWN, add the following to <code>index.
 console.log('updateResult', await record.data.text())
 ```
 
+Then from the terminal, run:
+
+```bash
+node index.js
+```
+
 The output will resemble:
 ```
 updateResult Hello, I'm updated!
