--- a/site/docs/web5/_quickstart-08-delete-record.mdx
+++ b/site/docs/web5/_quickstart-08-delete-record.mdx
@@ -18,6 +18,12 @@ To see the status of the delete transaction, add the following to <code>index.js
 console.log('deleteResult', deleteResult)
 ```
 
+Then from the terminal, run:
+
+```bash
+node index.js
+```
+
 The output will resemble:
 
 ```
