added ts-ignore per PR comments

--- a/site/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/site/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -68,6 +68,7 @@ Needs globalThis.crypto polyfill. This is *not* the crypto you're thinking of, i
 */
 import { webcrypto } from "node:crypto";
 
+// @ts-ignore
 if (!globalThis.crypto) {
 	globalThis.crypto = webcrypto;
 }
