--- a/site/api/web5-js/index.mdx
+++ b/site/api/web5-js/index.mdx
@@ -65,9 +65,11 @@ Needs globalThis.crypto polyfill.
 This is *not* the crypto you're thinking of.
 It's the original crypto...CRYPTOGRAPHY.
 */
-
 import { webcrypto } from "node:crypto";
 import { Web5 } from '@tbd54566975/web5';
+
+// @ts-ignore
+if (!globalThis.crypto) globalThis.crypto = webcrypto;
 ```
 </details>
 
