--- a/site/src/pages/wad23.mdx
+++ b/site/src/pages/wad23.mdx
@@ -1,8 +1,8 @@
 # Meet TBD at WeAreDevelopers World Congress!
 
-TBD is a developer-focused business unit from Block focused on creating a decentralized future that returns ownership and control over your finances, 
-data and identity. Guided by this vision, TBD is building an open source developer platform and infrastructure that enables everyone to access and participate 
-in the global economy. To learn more about Web5 checkout our [Docs](https://developer.tbd.website/docs/).
+TBD is building platforms and protocols that enable developers to easily build decentralized applications. TBD’s vision is a decentralized future that returns 
+ownership and control over finances, data, and identity to individuals. We invite you to join us in creating and adopting open and decentralized technologies that 
+solve real problems for real people. To learn more about Web5 checkout our [Docs](https://developer.tbd.website/docs/).
 
 ## Learn about Web5
 <ConferenceSchedule />
