updating event image & link

--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -46,10 +46,10 @@ We've highlighted some repositories with new open issues to help you get started
 * [DWN-Server](https://github.com/TBD54566975/dwn-server/issues?q=is%3Aissue+is%3Aopen+no%3Aassignee)
 * [DWN-SDK-JS](https://github.com/TBD54566975/dwn-sdk-js/issues?q=is%3Aissue+is%3Aopen+no%3Aassignee)
 
-## Upcoming Community Led Events
+## Upcoming Community Events
 
-<a href="https://discord.com/events/937858703112155166/1122154334101192786">
-    <img style={{height: '446px'}} src="https://hackmd.io/_uploads/r15WqoF_2.png" />
+<a href="https://discord.com/events/937858703112155166/1137041308989521990">
+    <img style={{height: '446px'}} src="https://hackmd.io/_uploads/rJz38hRi2.png" />
 </a>
 
 
