hiding Learn nav item

--- a/site/src/pages/projects/web5.mdx
+++ b/site/src/pages/projects/web5.mdx
@@ -35,6 +35,8 @@ import { content } from '@site/src/content/projects/web5/web5.js';
 
 <Divider type="slash" />
 
+<a name="components"/>
+
 <ProjectList {...content.components} />
 
 </div>
